--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -22,6 +22,7 @@
     </nav>
 </div>
 <script>
+        var river_levels = [];
         var substr = location.search.substr(1); //search url for input
         var dates = substr.split("+"); //get dates seperated by + in url
         var traceLeeds = {x: [], y: [], name: 'Leeds', type: 'scatter'}; //graph data for leeds river data
@@ -43,7 +44,10 @@
                         <li><a href="timeline.html?{{ flood_event.0|date:'SHORT_DATE_FORMAT' }}+{{ flood_event.1|date:'SHORT_DATE_FORMAT' }}">{{ flood_event.0|date:'d/m/Y' }} - {{ flood_event.1|date:'d/m/Y' }}</a></li> 
                         {% for river in flood_event.2 %}
                             <script>
-                                //var substr = location.search.substr(1); //search url for input
+                                river_levels.push("{{ river }}");
+                            </script>
+                            <script>
+                                /*//var substr = location.search.substr(1); //search url for input
                                 //var dates = substr.split("+"); //get dates seperated by + in url
                                 var dateTaken = new Date("{{ river.date_taken|date:'SHORT_DATE_FORMAT' }}"); //get the date_taken of river level
                                 if (dateTaken >= new Date(dates[0]) && dateTaken <= new Date(dates[1])) { //check river level date corresponds to dates requested
@@ -91,7 +95,7 @@
                                         traceMyth.x.push("{{ river.date_taken|date:'d/m/Y H:m' }}");
                                         traceMyth.y.push("{{ river.river_level }}");
                                     }
-                                }
+                                }*/
                             </script>
                         {% endfor %}
                     {% endfor %} 
@@ -175,4 +179,5 @@
         {% endif %}
     </ul>
 </div>
+<body onload="displayRiverLevels(river_levels)"></body>
 </html>
