--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -42,8 +42,13 @@
                {% if flood_events %} 
                     {% for flood_event in flood_events reversed %} 
                         <li><a href="timeline.html?{{ flood_event.0|date:'SHORT_DATE_FORMAT' }}+{{ flood_event.1|date:'SHORT_DATE_FORMAT' }}">{{ flood_event.0|date:'d/m/Y' }} - {{ flood_event.1|date:'d/m/Y' }}</a></li> 
-                        {% for river in flood_event.2 %}
+                        {% for river in flood_event.2 %}>
                             <script>
+                                river_levels.push("{{ river }}");
+                            </script>
+
+                            <script>
+                                /*
                                 //var substr = location.search.substr(1); //search url for input
                                 //var dates = substr.split("+"); //get dates seperated by + in url
                                 var dateTaken = new Date("{{ river.date_taken|date:'SHORT_DATE_FORMAT' }}"); //get the date_taken of river level
@@ -92,7 +97,7 @@
                                         traceMyth.x.push("{{ river.date_taken|date:'d/m/Y H:m' }}");
                                         traceMyth.y.push("{{ river.river_level }}");
                                     }
-                                }
+                                }*/
                             </script>
                         {% endfor %}
                     {% endfor %} 
@@ -177,5 +182,5 @@
         {% endif %}
     </ul>
 </div>
-<body onload="displayRiverLevels(river_levels)"></body>
+<body onload=displayRiverLevels(river_levels)></body>
 </html>
