trying to load river level graph data after page load.

--- a/django_project/flood/templates/flood/timeline.html
+++ b/django_project/flood/templates/flood/timeline.html
@@ -41,9 +41,9 @@
                {% if flood_events %} 
                     {% for flood_event in flood_events reversed %} 
                         <li><a href="timeline.html?{{ flood_event.0|date:'SHORT_DATE_FORMAT' }}+{{ flood_event.1|date:'SHORT_DATE_FORMAT' }}">{{ flood_event.0|date:'d/m/Y' }} - {{ flood_event.1|date:'d/m/Y' }}</a></li> 
+                        {% for river in flood_event.2 %}
                             <script>
-                                window.onload = displayRiverLevels();
-                                /*var dateTaken = new Date("{{ river.date_taken|date:'SHORT_DATE_FORMAT' }}"); //get the date_taken of river level
+                                var dateTaken = new Date("{{ river.date_taken|date:'SHORT_DATE_FORMAT' }}"); //get the date_taken of river level
                                 if (dateTaken >= new Date(dates[0]) && dateTaken <= new Date(dates[1])) { //check river level date corresponds to dates requested
                                     //console.log("{{ river.place }}")
                                     //console.log("{{ river.river_level }}")
@@ -89,8 +89,9 @@
                                         traceMyth.x.push("{{ river.date_taken|date:'d/m/Y H:m' }}");
                                         traceMyth.y.push("{{ river.river_level }}");
                                     }
-                                }*/
+                                }
                             </script>
+                        {% endfor %}
                     {% endfor %} 
                {% endif %}
               </ul>
