fixing size of navbar on map page for mobule.

--- a/django_project/flood/templates/flood/map.html
+++ b/django_project/flood/templates/flood/map.html
@@ -10,7 +10,8 @@
   <script src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
   <style>
-    #map{ height: 90%; width: 100%}
+    #map{ height: 80%; width: 100%}
+    #navigation{ height: 20%}
   </style>
 </head>
 <body>
@@ -18,7 +19,7 @@
  <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
  <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.Default.css' rel='stylesheet' />
 
- <div class="container">
+ <div class="container" id="navigation">
     <nav class="nav nav-pills">
         <li role="presentation"><a href="/">Home</a></li>
         <li role="presentation" class="active"><a href="map">Map</a></li>
