fixing size of navbar on map page for mobile.

--- a/django_project/flood/templates/flood/map.html
+++ b/django_project/flood/templates/flood/map.html
@@ -10,8 +10,7 @@
   <script src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
   <style>
-    #map{ height: 80%; width: 100%}
-    #navigation{ height: 20%}
+    #map{ height: 90%; width: 100%}
   </style>
 </head>
 <body>
@@ -19,17 +18,17 @@
  <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
  <link href='https://api.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.Default.css' rel='stylesheet' />
 
- <div class="container" id="navigation">
+ <div class="container">
     <nav class="nav nav-pills">
         <li role="presentation"><a href="/">Home</a></li>
         <li role="presentation" class="active"><a href="map">Map</a></li>
         <li role="presentation"><a href="timeline">Timeline</a></li>
     </nav>
- </div>
+
  <div class="container">
     <div id="map"></div>
  </div>
-
+</div>
  <script>
 
    // initialize the map
